# bidirectional_streaming

./: Cargo.toml  build.rs
proto/: streaming.proto
src/: client.rs  server.rs
